--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,8 @@
 }
 body {
     margin: 0;
-    background-image : url("https://img.freepik.com/foto-gratis/pizarra-decorativa-sobre-superficie-corcho_23-2147608821.jpg?t=st=1730140431~exp=1730144031~hmac=4a30199b142ea6aad40e2aa9b1c398f9db84d98741f5e0b1ef0fb126655a21ce&w=996");
+    /* background-image : url("https://img.freepik.com/foto-gratis/pizarra-decorativa-sobre-superficie-corcho_23-2147608821.jpg?t=st=1730140431~exp=1730144031~hmac=4a30199b142ea6aad40e2aa9b1c398f9db84d98741f5e0b1ef0fb126655a21ce&w=996"); */
+    background-image : url("https://i.pinimg.com/736x/5d/bb/99/5dbb997717ec451f43474b006407e9d6.jpg");
     background-position: center;
     background-size: cover; 
     background-repeat: no-repeat;
@@ -14,12 +15,27 @@ body {
 }
 
 .pizarra {
-    padding-left: 20%;
-    width: 400px;
-    height: 300px;
+    width: 100%;
     position: absolute;
-    color: antiquewhite;
-    
+    color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 20px; 
+}
+
+.task {
+  font-size: 15px;
+  font-weight: bold;
+  margin-right: 25px;
+}
+
+.task-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 70px;
 }
 
 .delete-button:hover {
@@ -29,10 +45,14 @@ body {
     border: none;
     cursor: pointer;
     font-size: 1em;
-  }
+}
 
   .modify-button {
-    
+   
+  }
+
+  .save-button {
+
   }
 
   .row {
