--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,6 @@
 }
 body {
     margin: 0;
-    /* background-image : url("https://img.freepik.com/foto-gratis/pizarra-decorativa-sobre-superficie-corcho_23-2147608821.jpg?t=st=1730140431~exp=1730144031~hmac=4a30199b142ea6aad40e2aa9b1c398f9db84d98741f5e0b1ef0fb126655a21ce&w=996"); */
     background-image : url("https://i.pinimg.com/736x/5d/bb/99/5dbb997717ec451f43474b006407e9d6.jpg");
     background-position: center;
     background-size: cover; 
@@ -21,7 +20,7 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-top: 20px; 
+    margin-top: 50px; 
 }
 
 .task {
@@ -39,21 +38,12 @@ body {
 }
 
 .delete-button:hover {
-    background-color: lightcoral;
     align-items: end;
     background: none;
     border: none;
     cursor: pointer;
     font-size: 1em;
 }
-
-  .modify-button {
-   
-  }
-
-  .save-button {
-
-  }
 
   .row {
     height: 50px;
@@ -80,4 +70,8 @@ body {
     left: 0;
     right: 0;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+  }
+
+  ul,li {
+    list-style: none;
   }
